--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fill-in-input",
   "version": "1.0.0",
   "description": "Fill-in standard input format",
+  "scripts": {
+    "tjs": "typescript-json-schema"
+  },
   "main": "index.js",
   "repository": "git@github.com:Sati-Co-Ltd/fill-in-input.git",
   "author": "Sati Co., Ltd.",
@@ -11,6 +14,7 @@
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.7.23",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "typescript-json-schema": "^0.54.0"
   }
 }
